--- a/index.html
+++ b/index.html
@@ -39,35 +39,29 @@
         <section>
             <h2><span>Proceedings</span></h2>
             <ul>
-                <div>
-                    <h3>Reports</h3>
-                    <ul>
-                        <li>
-                            <span>Catnip Fundraiser</span>
+                <h3>Reports</h3>
+                <ul>
+                    <li>
+                        <span>Catnip Fundraiser</span>
+                        <br>
+                        <p>
+                            It was moved by <b>Mr. Whiskers</b> and seconded by <b>Fluffy</b>
+                            that the Catnip Fundraiser would take place in Mochi's human's backyard.
                             <br>
-                            <p>
-                                It was moved by <b>Mr. Whiskers</b> and seconded by <b>Fluffy</b>
-                                that the Catnip Fundraiser would take place in Mochi's human's backyard.
-                                <br>
-                                <strong>Motion passed.</strong>
-                            </p>
-                        </li>
-                        
-                    </ul>
-                </div>
-                <div>
-                    <h3>Old Buisiness</h3>
-                    <ol>
-                        <li>World Domination</li>
-                    </ol>
-                </div>
-                <div>
-                    <h3>New Buisiness</h3>
-                    <ol>
-                        <li>Solutions to the dog problem</li>
-                        <li>Debate on why one brain cell is enough</li>
-                    </ol>
-                </div>
+                            <strong>Motion passed.</strong>
+                        </p>
+                    </li>
+                </ul>
+                    
+                <h3>Old Buisiness</h3>
+                <ol>
+                    <li>World Domination</li>
+                </ol>
+                <h3>New Buisiness</h3>
+                <ol>
+                    <li>Solutions to the dog problem</li>
+                    <li>Debate on why one brain cell is enough</li>
+                </ol>
             </ul>
         </section>
         <hr>
@@ -82,7 +76,7 @@
                     the picture, they will no longer want to be our slaves. <em>Discretion is imperative.</em>
                 </p>
                 <h4>Graph Illustrating a Dogs Effect on Feline Productivity</h4>
-                <img src="res/graph.png" alt="picture of graph" width="15%" height="15%">
+                <img src="res/graph.png" alt="picture of graph">
             </div>
             <div>
                 <h2>Agenda Item #2: Debate as to Why One Brain Cell Is Enough</h2>
@@ -97,11 +91,11 @@
                 <p>
                     <b>Boots</b> ask if there is a way to fill our food bowls ourselves without human assistance.
                     This may be a topic for a future meeting.
+                </p>
                     <details>
                         <summary>His Argument</summary>
                         Meow meow meowmeow meow. Meow, meow meow meow meow.
                     </details>
-                </p>
             </div>
         </section>
         <hr>
@@ -121,7 +115,7 @@
     <hr>
     <footer>
         <h2>Sign-Up:</h2>
-        <form action="">
+        <form>
             <div>
                 <label>Enter your name: </label>
                 <input type="text">
